added acscommons.jar to .classpath
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@161306 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb/.classpath
+++ b/LGPL/CommonSoftware/cdb/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar" sourcepath="/ACSROOT/lib/ACSErrTypeCommon.jar"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/logkit-1.2.jar"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/avalon-framework-4.1.5.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
