--- a/LGPL/CommonSoftware/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/eventGUI/src/project.properties
@@ -5,7 +5,7 @@
 ## 
 ## European Southern Observatory
 ## A. Caproni 12/02/2009
-## $Id: project.properties,v 1.12 2011/04/20 17:43:45 jschwarz Exp $
+## $Id: project.properties,v 1.13 2011/09/07 16:09:10 jschwarz Exp $
 ##
 #################################################
 
@@ -17,7 +17,8 @@ acs.jars.plugin=alma.acs.rcp.jars
 
 ## The list of ACS/ALMA jars required by this RCP
 ## These jars must be found in INTROOT/ACSROOT/JACORB_HOME
-acs.jars.required  = acsalarmSchemaBindings.jar \
+acs.jars.required  = jacorb.jar \
+ acsalarmSchemaBindings.jar \
  acsASsources.jar \
  acsCallbacksSupport.jar \
  acscommon.jar \
@@ -50,8 +51,8 @@ acs.jars.required  = acsalarmSchemaBindings.jar \
  maci.jar \
  maciSchemaBindings.jar \
  logkit.jar \
- jacorb.jar \
  log4j-1.2.15.jar \
+ repeatGuard.jar \
  CDB.jar \
  AcsNCTraceLogLTS.jar \
  NotificationServiceMC.jar \
