*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@162019 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/repeatGuard/.project
+++ b/LGPL/CommonSoftware/repeatGuard/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ACS_repeatguard</name>
+	<name>ACS_repeatGuard</name>
 	<comment></comment>
 	<projects>
 	</projects>
