--- a/LGPL/CommonSoftware/loggingtsTypes/ws/src/Makefile
+++ b/LGPL/CommonSoftware/loggingtsTypes/ws/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.5 2011/03/30 16:45:08 hsommer Exp $"
+# "@(#) $Id: Makefile,v 1.1 2011/09/23 13:33:33 bjeram Exp $"
 #
 # Makefile of ........
 #
