Changed title of ServiceSummaryView to specify NotifyService.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@162688 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/.settings/org.eclipse.jdt.core.prefs
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,6 @@
-#Thu Dec 27 13:38:41 CET 2007
+#Wed Sep 15 13:43:14 CEST 2010
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
