--- a/LGPL/CommonSoftware/eventGUI/.settings/org.eclipse.jdt.core.prefs
+++ b/LGPL/CommonSoftware/eventGUI/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,6 @@
-#Thu Dec 27 13:38:41 CET 2007
+#Wed Sep 15 13:43:14 CEST 2010
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
