*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@162935 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jacsutil/.classpath
+++ b/LGPL/CommonSoftware/jacsutil/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/hibernate3.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/hibernate-annotations.jar"/>
 	<classpathentry kind="lib" path="lib/jhall-2.0_05.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-lang-2.5.jar"/>
 	<classpathentry kind="output" path="object"/>
 </classpath>
