*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@163425 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsalarmidl/.classpath
+++ b/LGPL/CommonSoftware/acsalarmidl/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar" sourcepath="/JACORB_HOME/src"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jacsutil2.jar"/>
 	<classpathentry kind="output" path="lib"/>
 </classpath>
