revert back:  removed MAKE_ONLY="C++"  because we need errors definition in java as well
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@163687 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkData/src/Makefile
+++ b/LGPL/CommonSoftware/bulkData/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # E.S.O. - ACS project
 #
-# "@(#) $Id: Makefile,v 1.29 2011/10/14 17:58:17 bjeram Exp $"
+# "@(#) $Id: Makefile,v 1.30 2011/10/18 08:37:07 bjeram Exp $"
 #
 # Makefile of ........
 #
@@ -22,7 +22,7 @@
 # user definable C-compilation flags
 #USER_CFLAGS = 
 
-MAKE_ONLY="C++"
+#MAKE_ONLY="C++"
 
 #
 # Additional include and library search paths
