jlogTestLogProcessor script added to the list of scripts
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@163800 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/jlog/test/Makefile
+++ b/LGPL/CommonSoftware/acsGUIs/jlog/test/Makefile
@@ -19,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
 # MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.40 2011/09/07 23:03:35 acaproni Exp $" 
+# "@(#) $Id: Makefile,v 1.41 2011/10/19 15:54:16 acaproni Exp $" 
 #
 # Makefile of lcTest for jlog.
 #
@@ -86,7 +86,8 @@ SCRIPTS_L       = 	jlogTestCache \
 					jlogTestZooming \
 					jlogTestErrorLogFile \
 					jlogTestConverters \
-					jlogTestAntennaReductionRule
+					jlogTestAntennaReductionRule \
+					jlogTestLogProcessor
 
 #>>>>> END OF standard rules
   
