--- a/LGPL/CommonSoftware/acsidlcommon/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acsidlcommon/ws/src/Makefile
@@ -1,7 +1,25 @@
 #*******************************************************************************
-# PPPPPPPP
+# ALMA - Atacama Large Millimeter Array
+# Copyright (c) ESO - European Southern Observatory, 2011
+# (in the framework of the ALMA collaboration).
+# All rights reserved.
+# 
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Lesser General Public
+# License as published by the Free Software Foundation; either
+# version 2.1 of the License, or (at your option) any later version.
+# 
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+# Lesser General Public License for more details.
+# 
+# You should have received a copy of the GNU Lesser General Public
+# License along with this library; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
+#*******************************************************************************
 #
-# "@(#) $Id: Makefile,v 1.9 2011/03/16 14:52:41 bjeram Exp $"
+# "@(#) $Id: Makefile,v 1.10 2011/10/25 15:13:54 hsommer Exp $"
 #
 # Makefile of ........
 #
