Refactored the bdNTConfigurationParser class so it doesn't create anymore by itself the streams that it reads from the configuration, but instead it just returns a map with the configuration objects. These configuration objects are used later on when creating particular streams, using the new openReceiverStream(char *) methods declared on the IDL interface for the receiver component.
Implemented also these new methods. openReceivers() opens all configured receiver streams, while openReceiver(char *) will open a specific one (using the configuration read during component initialization time). If no configuration is present, a default one is used. In the same way, closeReceiver() closes all currently opened receivers, while closeReceiverStream(char *) closes a specific one.

Updated test for configuration parser and added it to tat. Also wrote a simple test that checks the open/closeReceiver(s) methods, and integrated it into tat.


git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@164579 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/bulkDataNT/test/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/test/Makefile
@@ -16,7 +16,7 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.12 2011/10/13 16:23:27 bjeram Exp $"
+# "@(#) $Id: Makefile,v 1.13 2011/11/02 18:07:21 rtobar Exp $"
 #
 # Makefile of ........
 #
@@ -56,7 +56,7 @@ USER_INC = -I$(NDDSHOME)/include -I$(NDDSHOME)/include/ndds
 # C programs (public and local)
 # -----------------------------
 EXECUTABLES     =
-EXECUTABLES_L   = bdNTSenderTest bdNTReceiverTest bdNTTEST1 bdNTConfigurationParserTest
+EXECUTABLES_L   = bdNTSenderTest bdNTReceiverTest bdNTTEST1 bdNTConfigurationParserTest bdNTReceiverImplClient
 
 #
 # <brief description of xxxxx program>
@@ -67,10 +67,13 @@ bdNTReceiverTest_OBJECTS=  bdNTReceiverTest
 bdNTReceiverTest_LIBS= bulkDataNTReceiver
 
 bdNTConfigurationParserTest_OBJECTS=bdNTConfigurationParserTest
-bdNTConfigurationParserTest_LIBS=bulkDataNTConfigParser
+bdNTConfigurationParserTest_LIBS=bulkDataNT
 
 bdNTTEST1_OBJECTS = bdNTTEST1
 bdNTTEST1_LIBS = bulkDataReceiverStubs bulkDataSenderStubs
+
+bdNTReceiverImplClient_OBJECTS= bdNTReceiverImplClient
+bdNTReceiverImplClient_LIBS= maciClient bulkDataReceiverStubs
 
 xxxxx_OBJECTS   =	
 xxxxx_LDFLAGS   =
