Intermediate check-in. Supplier implemented but not yet tested.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@164771 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/corbaNotify/src/Makefile
+++ b/Benchmark/corbaNotify/src/Makefile
@@ -108,24 +108,32 @@ tttlll_OBJECTS  =
 # Configuration Database Files
 # ----------------------------
 CDB_SCHEMAS = 
-
 # 
 # IDL Files and flags
 # 
-IDL_FILES =
+IDL_FILES = corbaNotifyTest_if
 TAO_IDLFLAGS =
 USER_IDL =
+
+
+COMPONENTS_JARFILES = corbaNotifyTestComp
+corbaNotifyTestComp_DIRS = acs/benchmark/nc
+
+
 #
 # Jarfiles and their directories
 #
-JARFILES= 
-jjj_DIRS=
+#JARFILES=corbaNotifyTest
+#corbaNotifyTest_DIRS=acs
 jjj_EXTRAS=
+
 # For expressing dependencies between jarfiles (parallel builds)
-jjj_JLIBS= 
+corbaNotifyTestComp_JLIBS = corbaNotifyTest_if
+
 #
 # java sources in Jarfile on/off
-DEBUG= 
+DEBUG=on 
+
 #
 # ACS XmlIdl generation on/off
 #
