Cleanup of files now under ../test
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@164801 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/corbaNotify/src/Makefile
+++ b/Benchmark/corbaNotify/src/Makefile
@@ -116,15 +116,17 @@ TAO_IDLFLAGS =
 USER_IDL =
 
 
+#
+# Component jarfiles
+#
 COMPONENTS_JARFILES = corbaNotifyTestComp
 corbaNotifyTestComp_DIRS = acs/benchmark/nc
-
 
 #
 # Jarfiles and their directories
 #
-#JARFILES=corbaNotifyTest
-#corbaNotifyTest_DIRS=acs
+JARFILES=
+jjj_DIRS=
 jjj_EXTRAS=
 
 # For expressing dependencies between jarfiles (parallel builds)
