*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@164802 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/corbaNotify/.classpath
+++ b/Benchmark/corbaNotify/.classpath
@@ -15,5 +15,10 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="var" path="INTROOT/lib/benchmarkUtil.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/maciSchemaBindings.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsdaemonErrType.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/maci.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
