Extended to include com.cosylab.acs.alarm package in jar building
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@164922 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
@@ -138,7 +138,7 @@ USER_IDL =
 # Jarfiles and their directories
 #
 JARFILES= lasercoretest
-lasercoretest_DIRS=alma com
+lasercoretest_DIRS=alma com cern
 #
 # java sources in Jarfile on/off
 DEBUG= 
