Added Makefile parameters argument to the Makefile of Tools module (MAKE_PARS)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@165949 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/antlr/src/Makefile
+++ b/LGPL/Tools/antlr/src/Makefile
@@ -21,7 +21,7 @@
 #*******************************************************************************
 # E.S.O. - ACS project
 #
-# "@(#) $Id: Makefile,v 1.6 2011/11/18 15:34:53 rtobar Exp $"
+# "@(#) $Id: Makefile,v 1.7 2011/11/28 16:22:27 javarias Exp $"
 #
 # Makefile of ........
 #
@@ -125,6 +125,6 @@ configure : unpack
 .PHONY: build_antlr
 build_antlr: configure
 	@echo " . . . building antlr . . . "
-	@cd antlr-${ANTLR_VER_2}; $(MAKE) SUBDIRS="antlr lib"
+	@cd antlr-${ANTLR_VER_2}; $(MAKE) $(MAKE_PARS) SUBDIRS="antlr lib"
 
 #___oOo___
