Changes made to modules on Tools to work on Windows under Cygwin backported from branches ACS-9_0_0-windows-B and ACS-9_1_0-windows-B.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@168064 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/gmp/src/Makefile
+++ b/LGPL/Tools/gmp/src/Makefile
@@ -21,7 +21,11 @@ ifeq ($(ARCH_RET), 1)
    BUILD_PLATFORM_FLAGS=
 else
   ifndef GMP_OPTIMIZE
-     BUILD_PLATFORM_FLAGS=--build=pentium3-pc-linux-gnu
+    ifeq ($(OS), $(CYGWIN_VER))
+      BUILD_PLATFORM_FLAGS=--build=pentium3-pc-cygwin
+    else
+      BUILD_PLATFORM_FLAGS=--build=pentium3-pc-linux-gnu
+    endif
   endif
 endif
 ##############################################
