--- a/LGPL/Tools/extpy/src/Makefile
+++ b/LGPL/Tools/extpy/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # E.S.O. - ACS project
 #
-# "@(#) $Id: Makefile,v 1.43 2011/10/25 17:04:19 javarias Exp $"
+# "@(#) $Id: Makefile,v 1.44 2012/01/17 11:57:11 tstaig Exp $"
 #
 # Makefile of ........
 #
@@ -95,7 +95,7 @@ PYCHECKER: pychecker-0.8.14.tar.gz
 NUMERIC: Numeric-24.2.tar.gz
 	@echo "== Building Numeric"
 	@gtar -zxvf Numeric-24.2.tar.gz;
-	@cd Numeric-24.2; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages; 
+	@cd Numeric-24.2; patch -p1 < ../Numeric-gettimeofday.patch; python setup.py install --home=$(INSTALL_ROOT) --install-purelib=$(INSTALL_ROOT)/lib/python/site-packages --install-platlib=$(INSTALL_ROOT)/lib/python/site-packages; 
 
 NUMARRAY: numarray-1.3.3.tar.gz
 	@echo "== Building numarray"
